--- a/index.html
+++ b/index.html
@@ -44,33 +44,20 @@
     <script>
         const today = new Date();
         let events = JSON.parse(localStorage.getItem('events')) || {};
-        let holidays = JSON.parse(localStorage.getItem('holidays')) || {
-            '2025-01-01': '신정',
-            '2025-01-28': '설날',
-            '2025-01-29': '설날',
-            '2025-01-30': '설날',
-            '2025-03-01': '삼일절',
-            '2025-03-03': '삼일절 대체공휴일',
-            '2025-05-05': '어린이날',
-            '2025-05-06': '대체공휴일',
-            '2025-06-06': '현충일',
-            '2025-08-15': '광복절',
-            '2025-10-03': '개천절',
-            '2025-10-05': '추석',
-            '2025-10-06': '추석',
-            '2025-10-07': '추석',
-            '2025-10-08': '추석 대체공휴일',
-            '2025-10-09': '한글날',
-            '2025-12-25': '크리스마스',
-            '2026-01-01': '신정',
-            '2026-02-16': '설날',
-            '2026-02-17': '설날',
-            '2026-02-18': '설날',
-            '2026-03-01': '삼일절'
-        };
+        let holidays = JSON.parse(localStorage.getItem('holidays')) || {};
 
-        if (!localStorage.getItem('holidays')) {
-            localStorage.setItem('holidays', JSON.stringify(holidays));
+        // 공휴일 데이터를 GitHub에서 가져오기
+        async function fetchHolidays(year) {
+            try {
+                const response = await fetch(`https://holidays.hyunbin.page/${year}.json`);
+                if (!response.ok) throw new Error('Failed to fetch holidays');
+                const data = await response.json();
+                localStorage.setItem(`holidays_${year}`, JSON.stringify(data));
+                return data;
+            } catch (error) {
+                console.error('Error fetching holidays:', error);
+                return JSON.parse(localStorage.getItem(`holidays_${year}`)) || {};
+            }
         }
 
         const yearSelect = document.getElementById('year');
@@ -82,7 +69,7 @@
             monthSelect.innerHTML += `<option value="${m}" ${m === today.getMonth() + 1 ? 'selected' : ''}>${m}</option>`;
         }
 
-        function changeMonth(delta) {
+        async function changeMonth(delta) {
             let year = parseInt(yearSelect.value);
             let month = parseInt(monthSelect.value) - 1 + delta;
             if (month < 0) {
@@ -95,13 +82,15 @@
             if (year >= 2025 && year <= 2026) {
                 yearSelect.value = year;
                 monthSelect.value = month + 1;
+                holidays = await fetchHolidays(year);
                 displayCalendar();
             }
         }
 
-        function displayCalendar() {
+        async function displayCalendar() {
             const year = parseInt(yearSelect.value);
             const month = parseInt(monthSelect.value) - 1;
+            holidays = await fetchHolidays(year); // 연도별 공휴일 데이터 가져오기
             const firstDay = new Date(year, month, 1);
             const lastDay = new Date(year, month + 1, 0);
             const daysInMonth = lastDay.getDate();
@@ -151,13 +140,16 @@
             document.getElementById('events').innerHTML = eventsText;
         }
 
-        window.addEventListener('load', () => {
+        window.addEventListener('load', async () => {
             events = JSON.parse(localStorage.getItem('events')) || {};
-            holidays = JSON.parse(localStorage.getItem('holidays')) || holidays;
+            holidays = await fetchHolidays(yearSelect.value);
             displayCalendar();
         });
 
-        yearSelect.addEventListener('change', displayCalendar);
+        yearSelect.addEventListener('change', async () => {
+            holidays = await fetchHolidays(yearSelect.value);
+            displayCalendar();
+        });
         monthSelect.addEventListener('change', displayCalendar);
     </script>
 </body>
