--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         h1 { color: #333; }
         .calendar { display: inline-block; text-align: left; }
         .calendar table { border-collapse: collapse; margin: 20px auto; background-color: white; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-        .calendar th, .calendar td { width: 100px; height: 100px; text-align: center; border: 1px solid #ddd; vertical-align: top; }
+        .calendar th, .calendar td { width: 60px; height: 60px; text-align: center; border: 1px solid #ddd; vertical-align: top; }
         .calendar th { background-color: #4CAF50; color: white; }
         .calendar .weekday { background-color: #ffffff; }
         .calendar .weekend { background-color: #ffcccb; }
@@ -44,7 +44,8 @@
     <script>
         const today = new Date();
         let events = JSON.parse(localStorage.getItem('events')) || {};
-        let holidays = JSON.parse(localStorage.getItem('holidays')) || {};
+        let holidays = JSON.parse(localStorage.getItem('holidays_2025')) || {};
+        let customHolidays = JSON.parse(localStorage.getItem('custom_holidays')) || {};
 
         // 공휴일 데이터를 GitHub에서 가져오기
         async function fetchHolidays(year) {
@@ -58,6 +59,13 @@
                 console.error('Error fetching holidays:', error);
                 return JSON.parse(localStorage.getItem(`holidays_${year}`)) || {};
             }
+        }
+
+        // 공휴일과 사용자 정의 공휴일 병합
+        function mergeHolidays(year) {
+            const fetchedHolidays = JSON.parse(localStorage.getItem(`holidays_${year}`)) || {};
+            const custom = JSON.parse(localStorage.getItem('custom_holidays')) || {};
+            return { ...fetchedHolidays, ...custom };
         }
 
         const yearSelect = document.getElementById('year');
@@ -83,6 +91,7 @@
                 yearSelect.value = year;
                 monthSelect.value = month + 1;
                 holidays = await fetchHolidays(year);
+                holidays = mergeHolidays(year);
                 displayCalendar();
             }
         }
@@ -90,7 +99,7 @@
         async function displayCalendar() {
             const year = parseInt(yearSelect.value);
             const month = parseInt(monthSelect.value) - 1;
-            holidays = await fetchHolidays(year); // 연도별 공휴일 데이터 가져오기
+            holidays = mergeHolidays(year); // 공휴일과 사용자 정의 공휴일 병합
             const firstDay = new Date(year, month, 1);
             const lastDay = new Date(year, month + 1, 0);
             const daysInMonth = lastDay.getDate();
@@ -143,11 +152,13 @@
         window.addEventListener('load', async () => {
             events = JSON.parse(localStorage.getItem('events')) || {};
             holidays = await fetchHolidays(yearSelect.value);
+            holidays = mergeHolidays(yearSelect.value);
             displayCalendar();
         });
 
         yearSelect.addEventListener('change', async () => {
             holidays = await fetchHolidays(yearSelect.value);
+            holidays = mergeHolidays(yearSelect.value);
             displayCalendar();
         });
         monthSelect.addEventListener('change', displayCalendar);
