--- a/manage.html
+++ b/manage.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>GOGCC - 일정 및 공휴일 관리</title>
+    <title>월별 일정관리</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; padding: 20px; background-color: #f5f5f5; }
         .container { max-width: 800px; margin: 0 auto; }
@@ -45,9 +45,12 @@
             <button onclick="handleSchedule()">일정 추가</button>
         </div>
         <div class="form">
-            <h3>공휴일 추가</h3>
-            <p class="note">공휴일은 브라우저에 자동 저장됩니다.<br>
+            <h3>공휴일 관리</h3>
+            <p class="note">기본 공휴일은 읽기 전용이며, 사용자 정의 공휴일은 추가/삭제 가능합니다.<br>
             새 공휴일 추가 시 기존 평일 일정은 자동으로 조정됩니다.</p>
+            <label>연도: <select id="year"></select></label>
+            <button onclick="loadHolidays()">공휴일 불러오기</button><br>
+            <label>사용자 정의 공휴일 추가</label><br>
             <label>공휴일 날짜: <input type="date" id="holidayDate"></label><br>
             <label>공휴일 이름: <input type="text" id="holidayName" placeholder="예: 선거일"></label><br>
             <button onclick="addHoliday()">공휴일 추가</button>
@@ -62,21 +65,62 @@
 
     <script>
         let events = JSON.parse(localStorage.getItem('events')) || {};
-        let holidays = JSON.parse(localStorage.getItem('holidays')) || {};
+        let customHolidays = JSON.parse(localStorage.getItem('custom_holidays')) || {};
+
+        // 공휴일 데이터를 GitHub에서 가져오기
+        async function fetchHolidays(year) {
+            try {
+                const response = await fetch(`https://holidays.hyunbin.page/${year}.json`);
+                if (!response.ok) throw new Error('Failed to fetch holidays');
+                const data = await response.json();
+                localStorage.setItem(`holidays_${year}`, JSON.stringify(data));
+                return data;
+            } catch (error) {
+                console.error('Error fetching holidays:', error);
+                return JSON.parse(localStorage.getItem(`holidays_${year}`)) || {};
+            }
+        }
+
+        // 공휴일과 사용자 정의 공휴일 병합
+        function mergeHolidays(year) {
+            const fetchedHolidays = JSON.parse(localStorage.getItem(`holidays_${year}`)) || {};
+            const custom = JSON.parse(localStorage.getItem('custom_holidays')) || {};
+            return { ...fetchedHolidays, ...custom };
+        }
+
+        // 연도 선택 드롭다운 초기화
+        const yearSelect = document.getElementById('year');
+        for (let y = 2025; y <= 2026; y++) {
+            yearSelect.innerHTML += `<option value="${y}" ${y === new Date().getFullYear() ? 'selected' : ''}>${y}</option>`;
+        }
+
+        // 공휴일 표시
+        async function loadHolidays() {
+            const year = yearSelect.value;
+            const holidays = await fetchHolidays(year);
+            const mergedHolidays = mergeHolidays(year);
+            let html = '<h3>등록된 공휴일</h3>';
+            const sortedDates = Object.keys(mergedHolidays).sort();
+            for (let date of sortedDates) {
+                const isCustom = date in customHolidays;
+                html += `<div>${date}: ${mergedHolidays[date]} ${isCustom ? `<button onclick="deleteHoliday('${date}')">삭제</button>` : '(기본)'}</div>`;
+            }
+            document.getElementById('holidayList').innerHTML = html;
+        }
 
         function isValidDay(date, dayType) {
             const dateStr = date.toISOString().split('T')[0];
+            const mergedHolidays = mergeHolidays(date.getFullYear());
             if (dayType === 'weekday') {
-                return date.getDay() !== 0 && date.getDay() !== 6 && !(dateStr in holidays);
+                return date.getDay() !== 0 && date.getDay() !== 6 && !(dateStr in mergedHolidays);
             }
             if (dayType === 'weekend') {
-                return (date.getDay() === 0 || date.getDay() === 6 || (dateStr in holidays));
+                return (date.getDay() === 0 || date.getDay() === 6 || (dateStr in mergedHolidays));
             }
             return true;
         }
 
         function addSchedule(scheduleName, startDate, endDate, dayType, cycleDays, durationDays, eventTitle) {
-            console.log('addSchedule:', { scheduleName, startDate, endDate, dayType, cycleDays, durationDays, eventTitle });
             if (!events[scheduleName]) events[scheduleName] = [];
             let currentDate = new Date(startDate);
             let cycleCount = 0;
@@ -117,7 +161,6 @@
         }
 
         function reprocessSchedules() {
-            console.log('reprocessSchedules called');
             const originalEvents = { ...events };
             events = {};
             for (let scheduleName in originalEvents) {
@@ -145,12 +188,12 @@
 
                 if (scheduleEvents.every(e => {
                     const date = new Date(e.date);
-                    return date.getDay() === 0 || date.getDay() === 6 || (e.date in holidays);
+                    return date.getDay() === 0 || date.getDay() === 6 || (e.date in mergeHolidays(date.getFullYear()));
                 })) {
                     dayType = 'weekend';
                 } else if (scheduleEvents.every(e => {
                     const date = new Date(e.date);
-                    return !(date.getDay() === 0 || date.getDay() === 6 || (e.date in holidays));
+                    return !(date.getDay() === 0 || date.getDay() === 6 || (e.date in mergeHolidays(date.getFullYear())));
                 })) {
                     dayType = 'weekday';
                 } else {
@@ -164,7 +207,6 @@
         }
 
         function handleSchedule() {
-            console.log('handleSchedule called');
             const scheduleName = document.getElementById('scheduleName').value.trim();
             const startDateInput = document.getElementById('startDate').value;
             const endDateInput = document.getElementById('endDate').value;
@@ -206,18 +248,17 @@
         }
 
         function addHoliday() {
-            console.log('addHoliday called');
             const holidayDate = document.getElementById('holidayDate').value;
             const holidayName = document.getElementById('holidayName').value.trim();
             if (!holidayDate || !holidayName) {
                 alert('공휴일 날짜와 이름을 입력하세요.');
                 return;
             }
-            holidays[holidayDate] = holidayName;
-            localStorage.setItem('holidays', JSON.stringify(holidays));
+            customHolidays[holidayDate] = holidayName;
+            localStorage.setItem('custom_holidays', JSON.stringify(customHolidays));
             reprocessSchedules();
-            displayHolidays();
-            alert('공휴일이 추가되었습니다. 기존 평일 일정이 조정되었습니다.');
+            loadHolidays();
+            alert('사용자 정의 공휴일이 추가되었습니다. 기존 평일 일정이 조정되었습니다.');
         }
 
         function displaySchedules() {
@@ -238,16 +279,6 @@
             scheduleList.innerHTML = html;
         }
 
-        function displayHolidays() {
-            const holidayList = document.getElementById('holidayList');
-            let html = '<h3>등록된 공휴일</h3>';
-            const sortedHolidays = Object.keys(holidays).sort();
-            for (let date of sortedHolidays) {
-                html += `<div>${date}: ${holidays[date]} <button onclick="deleteHoliday('${date}')">삭제</button></div>`;
-            }
-            holidayList.innerHTML = html;
-        }
-
         function deleteSchedule(scheduleName) {
             if (confirm(`'${scheduleName}' 일정을 삭제하시겠습니까?`)) {
                 delete events[scheduleName];
@@ -265,20 +296,23 @@
         }
 
         function deleteHoliday(date) {
-            if (confirm(`'${holidays[date]}' 공휴일을 삭제하시겠습니까?`)) {
-                delete holidays[date];
-                localStorage.setItem('holidays', JSON.stringify(holidays));
+            if (confirm(`'${customHolidays[date]}' 사용자 정의 공휴일을 삭제하시겠습니까?`)) {
+                delete customHolidays[date];
+                localStorage.setItem('custom_holidays', JSON.stringify(customHolidays));
                 reprocessSchedules();
-                displayHolidays();
+                loadHolidays();
             }
         }
 
-        window.addEventListener('load', () => {
+        window.addEventListener('load', async () => {
             events = JSON.parse(localStorage.getItem('events')) || {};
-            holidays = JSON.parse(localStorage.getItem('holidays')) || {};
+            customHolidays = JSON.parse(localStorage.getItem('custom_holidays')) || {};
+            await fetchHolidays(yearSelect.value);
+            loadHolidays();
             displaySchedules();
-            displayHolidays();
         });
+
+        yearSelect.addEventListener('change', loadHolidays);
     </script>
 </body>
 </html>
