--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         h1 { color: #333; }
         .calendar { display: inline-block; text-align: left; }
         .calendar table { border-collapse: collapse; margin: 20px auto; background-color: white; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-        .calendar th, .calendar td { width: 60px; height: 60px; text-align: center; border: 1px solid #ddd; vertical-align: top; }
+        .calendar th, .calendar td { width: 100px; height: 100px; text-align: center; border: 1px solid #ddd; vertical-align: top; }
         .calendar th { background-color: #4CAF50; color: white; }
         .calendar .weekday { background-color: #ffffff; }
         .calendar .weekend { background-color: #ffcccb; }
@@ -26,7 +26,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>월간일정</h1>
+        <h1>월별 일정관리</h1>
         <div>
             <label>연도:</label>
             <select id="year"></select>
