--- a/manage.html
+++ b/manage.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>GOGCC - 일정 및 공휴일 관리</title>
+    <title>월별 일정관리</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; padding: 20px; background-color: #f5f5f5; }
         .container { max-width: 800px; margin: 0 auto; }
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>GOGCC - 일정 및 공휴일 관리</h1>
+        <h1>월별 일정관리</h1>
         <a href="index.html">달력으로 돌아가기</a>
         <div class="form">
             <h3>일정 추가</h3>
