--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>월별 일정관리</title>
+    <title>GOGCC</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; padding: 20px; background-color: #f5f5f5; }
         .container { max-width: 800px; margin: 0 auto; }
         h1 { color: #333; }
         .calendar { display: inline-block; text-align: left; }
         .calendar table { border-collapse: collapse; margin: 20px auto; background-color: white; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-        .calendar th, .calendar td { width: 100px; height: 100px; text-align: center; border: 1px solid #ddd; vertical-align: top; }
+        .calendar th, .calendar td { width: 60px; height: 60px; text-align: center; border: 1px solid #ddd; vertical-align: top; }
         .calendar th { background-color: #4CAF50; color: white; }
         .calendar .weekday { background-color: #ffffff; }
-        .calendar .weekend { background-color: #ffcccb; }
-        .calendar .holiday { background-color: #ffcccb; }
+        .calendar .weekend, .calendar .holiday { background-color: #ffcccb; }
         .calendar .today { background-color: #add8e6; }
         .calendar .event { font-weight: bold; color: #d81b60; font-size: 12px; }
         select, button, a { padding: 5px; margin: 5px; border-radius: 3px; }
@@ -26,7 +25,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>월별 일정관리</h1>
+        <h1>월간일정</h1>
         <div>
             <label>연도:</label>
             <select id="year"></select>
@@ -34,7 +33,7 @@
             <label>월:</label>
             <select id="month"></select>
             <button onclick="changeMonth(1)">→</button>
-            <br>
+            <button onclick="displayCalendar()">달력 보기</button>
             <a href="manage.html">일정 및 공휴일 관리</a>
         </div>
         <div class="calendar" id="calendar"></div>
@@ -44,13 +43,12 @@
     <script>
         const today = new Date();
         let events = JSON.parse(localStorage.getItem('events')) || {};
-        let holidays = JSON.parse(localStorage.getItem('holidays_2025')) || {};
-        let customHolidays = JSON.parse(localStorage.getItem('custom_holidays')) || {};
+        let holidays = {};
 
-        // 공휴일 데이터를 GitHub에서 가져오기
+        // 공휴일 데이터 가져오기
         async function fetchHolidays(year) {
             try {
-                const response = await fetch(`https://holidays.hyunbin.page/${year}.json`);
+                const response = await fetch(`holidays_${year}.json`);
                 if (!response.ok) throw new Error('Failed to fetch holidays');
                 const data = await response.json();
                 localStorage.setItem(`holidays_${year}`, JSON.stringify(data));
@@ -64,19 +62,21 @@
         // 공휴일과 사용자 정의 공휴일 병합
         function mergeHolidays(year) {
             const fetchedHolidays = JSON.parse(localStorage.getItem(`holidays_${year}`)) || {};
-            const custom = JSON.parse(localStorage.getItem('custom_holidays')) || {};
-            return { ...fetchedHolidays, ...custom };
+            const customHolidays = JSON.parse(localStorage.getItem('custom_holidays')) || {};
+            return { ...fetchedHolidays, ...customHolidays };
         }
 
+        // 연도 및 월 선택 초기화
         const yearSelect = document.getElementById('year');
         const monthSelect = document.getElementById('month');
-        for (let y = 2025; y <= 2026; y++) {
+        for (let y = today.getFullYear(); y <= today.getFullYear() + 2; y++) {
             yearSelect.innerHTML += `<option value="${y}" ${y === today.getFullYear() ? 'selected' : ''}>${y}</option>`;
         }
         for (let m = 1; m <= 12; m++) {
             monthSelect.innerHTML += `<option value="${m}" ${m === today.getMonth() + 1 ? 'selected' : ''}>${m}</option>`;
         }
 
+        // 월 변경
         async function changeMonth(delta) {
             let year = parseInt(yearSelect.value);
             let month = parseInt(monthSelect.value) - 1 + delta;
@@ -87,7 +87,7 @@
                 month = 0;
                 year++;
             }
-            if (year >= 2025 && year <= 2026) {
+            if (year >= today.getFullYear() && year <= today.getFullYear() + 2) {
                 yearSelect.value = year;
                 monthSelect.value = month + 1;
                 holidays = await fetchHolidays(year);
@@ -96,10 +96,11 @@
             }
         }
 
+        // 달력 표시
         async function displayCalendar() {
             const year = parseInt(yearSelect.value);
             const month = parseInt(monthSelect.value) - 1;
-            holidays = mergeHolidays(year); // 공휴일과 사용자 정의 공휴일 병합
+            holidays = mergeHolidays(year);
             const firstDay = new Date(year, month, 1);
             const lastDay = new Date(year, month + 1, 0);
             const daysInMonth = lastDay.getDate();
@@ -107,33 +108,20 @@
             const todayStr = today.toISOString().split('T')[0];
 
             let html = '<table><tr><th>일</th><th>월</th><th>화</th><th>수</th><th>목</th><th>금</th><th>토</th></tr><tr>';
-            for (let i = 0; i < startDay; i++) {
-                html += '<td></td>';
-            }
+            for (let i = 0; i < startDay; i++) html += '<td></td>';
             for (let day = 1; day <= daysInMonth; day++) {
                 const date = new Date(year, month, day);
                 const dateStr = `${year}-${String(month + 1).padStart(2, '0')}-${String(day).padStart(2, '0')}`;
-                let cellClass = '';
-                if (dateStr === todayStr) {
-                    cellClass = 'today';
-                } else if (dateStr in holidays) {
-                    cellClass = 'holiday';
-                } else if (date.getDay() === 0 || date.getDay() === 6) {
-                    cellClass = 'weekend';
-                } else {
-                    cellClass = 'weekday';
-                }
+                let cellClass = dateStr === todayStr ? 'today' : 
+                                dateStr in holidays ? 'holiday' : 
+                                date.getDay() === 0 || date.getDay() === 6 ? 'weekend' : 'weekday';
                 let eventText = dateStr in holidays ? `<br><span class="event">${holidays[dateStr]}</span>` : '';
                 for (let schedule in events) {
                     const event = events[schedule].find(e => e.date === dateStr);
-                    if (event) {
-                        eventText += `<br><span class="event">${event.title} (${schedule})</span>`;
-                    }
+                    if (event) eventText += `<br><span class="event">${event.title} (${schedule})</span>`;
                 }
                 html += `<td class="${cellClass}">${day}${eventText}</td>`;
-                if ((startDay + day) % 7 === 0) {
-                    html += '</tr><tr>';
-                }
+                if ((startDay + day) % 7 === 0) html += '</tr><tr>';
             }
             html += '</tr></table>';
             document.getElementById('calendar').innerHTML = html;
@@ -149,13 +137,13 @@
             document.getElementById('events').innerHTML = eventsText;
         }
 
+        // 초기화 및 이벤트 리스너
         window.addEventListener('load', async () => {
             events = JSON.parse(localStorage.getItem('events')) || {};
             holidays = await fetchHolidays(yearSelect.value);
             holidays = mergeHolidays(yearSelect.value);
             displayCalendar();
         });
-
         yearSelect.addEventListener('change', async () => {
             holidays = await fetchHolidays(yearSelect.value);
             holidays = mergeHolidays(yearSelect.value);
