--- a/manage.html
+++ b/manage.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>월별 일정관리</title>
+    <title>GOGCC - 일정 및 공휴일 관리</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; padding: 20px; background-color: #f5f5f5; }
         .container { max-width: 800px; margin: 0 auto; }
@@ -20,15 +20,15 @@
 </head>
 <body>
     <div class="container">
-        <h1>월별 일정관리</h1>
+        <h1>GOGCC - 일정 및 공휴일 관리</h1>
         <a href="index.html">달력으로 돌아가기</a>
         <div class="form">
             <h3>일정 추가</h3>
             <p class="note">일정은 브라우저에 자동 저장됩니다.<br>
-            - 평일: 주말/공휴일 제외, 평일만 카운팅.<br>
-            - 주말/공휴일: 주말과 공휴일만 카운팅.<br>
-            - 둘 다: 모든 날 연속 카운팅.<br>
-            - 새 공휴일 추가 시 평일 일정은 자동 미뤄집니다.</p>
+            - 평일: 주말/공휴일 제외<br>
+            - 주말/공휴일: 주말과 공휴일만<br>
+            - 둘 다: 모든 날 연속<br>
+            - 새 공휴일 추가 시 평일 일정은 자동 조정</p>
             <label>일정 제목: <input type="text" id="scheduleName" placeholder="예: 프로젝트 A"></label><br>
             <label>시작 날짜: <input type="date" id="startDate" value="2025-05-16"></label><br>
             <label>종료 날짜: <input type="date" id="endDate" value="2026-03-31"></label><br>
@@ -46,10 +46,8 @@
         </div>
         <div class="form">
             <h3>공휴일 관리</h3>
-            <p class="note">기본 공휴일은 읽기 전용이며, 사용자 정의 공휴일은 추가/삭제 가능합니다.<br>
-            새 공휴일 추가 시 기존 평일 일정은 자동으로 조정됩니다.</p>
-            <label>연도: <select id="year"></select></label>
-            <button onclick="loadHolidays()">공휴일 불러오기</button><br>
+            <p class="note">기본 공휴일은 읽기 전용, 사용자 정의 공휴일은 추가/삭제 가능</p>
+            <label>연도: <select id="year"></select></label><br>
             <label>사용자 정의 공휴일 추가</label><br>
             <label>공휴일 날짜: <input type="date" id="holidayDate"></label><br>
             <label>공휴일 이름: <input type="text" id="holidayName" placeholder="예: 선거일"></label><br>
@@ -64,13 +62,14 @@
     </div>
 
     <script>
+        const today = new Date();
         let events = JSON.parse(localStorage.getItem('events')) || {};
         let customHolidays = JSON.parse(localStorage.getItem('custom_holidays')) || {};
 
-        // 공휴일 데이터를 GitHub에서 가져오기
+        // 공휴일 데이터 가져오기
         async function fetchHolidays(year) {
             try {
-                const response = await fetch(`https://holidays.hyunbin.page/${year}.json`);
+                const response = await fetch(`holidays_${year}.json`);
                 if (!response.ok) throw new Error('Failed to fetch holidays');
                 const data = await response.json();
                 localStorage.setItem(`holidays_${year}`, JSON.stringify(data));
@@ -88,38 +87,35 @@
             return { ...fetchedHolidays, ...custom };
         }
 
-        // 연도 선택 드롭다운 초기화
+        // 연도 선택 초기화
         const yearSelect = document.getElementById('year');
-        for (let y = 2025; y <= 2026; y++) {
-            yearSelect.innerHTML += `<option value="${y}" ${y === new Date().getFullYear() ? 'selected' : ''}>${y}</option>`;
+        for (let y = today.getFullYear(); y <= today.getFullYear() + 2; y++) {
+            yearSelect.innerHTML += `<option value="${y}" ${y === today.getFullYear() ? 'selected' : ''}>${y}</option>`;
         }
 
         // 공휴일 표시
         async function loadHolidays() {
             const year = yearSelect.value;
-            const holidays = await fetchHolidays(year);
+            await fetchHolidays(year);
             const mergedHolidays = mergeHolidays(year);
             let html = '<h3>등록된 공휴일</h3>';
-            const sortedDates = Object.keys(mergedHolidays).sort();
-            for (let date of sortedDates) {
+            Object.keys(mergedHolidays).sort().forEach(date => {
                 const isCustom = date in customHolidays;
                 html += `<div>${date}: ${mergedHolidays[date]} ${isCustom ? `<button onclick="deleteHoliday('${date}')">삭제</button>` : '(기본)'}</div>`;
-            }
+            });
             document.getElementById('holidayList').innerHTML = html;
         }
 
+        // 유효한 날짜 확인
         function isValidDay(date, dayType) {
             const dateStr = date.toISOString().split('T')[0];
             const mergedHolidays = mergeHolidays(date.getFullYear());
-            if (dayType === 'weekday') {
-                return date.getDay() !== 0 && date.getDay() !== 6 && !(dateStr in mergedHolidays);
-            }
-            if (dayType === 'weekend') {
-                return (date.getDay() === 0 || date.getDay() === 6 || (dateStr in mergedHolidays));
-            }
+            if (dayType === 'weekday') return date.getDay() !== 0 && date.getDay() !== 6 && !(dateStr in mergedHolidays);
+            if (dayType === 'weekend') return date.getDay() === 0 || date.getDay() === 6 || dateStr in mergedHolidays;
             return true;
         }
 
+        // 일정 추가
         function addSchedule(scheduleName, startDate, endDate, dayType, cycleDays, durationDays, eventTitle) {
             if (!events[scheduleName]) events[scheduleName] = [];
             let currentDate = new Date(startDate);
@@ -130,22 +126,18 @@
                     let validDaysAdded = 0;
                     while (validDaysAdded < durationDays && currentDate <= endDate) {
                         if (isValidDay(currentDate, dayType)) {
-                            const dateStr = currentDate.toISOString().split('T')[0];
-                            events[scheduleName].push({ date: dateStr, title: eventTitle });
+                            events[scheduleName].push({ date: currentDate.toISOString().split('T')[0], title: eventTitle });
                             validDaysAdded++;
                         }
                         currentDate.setDate(currentDate.getDate() + 1);
                     }
                     if (validDaysAdded < durationDays) break;
-
                     if (dayType === 'all') {
                         currentDate.setDate(currentDate.getDate() - validDaysAdded + cycleDays);
                     } else {
                         let validCycleDays = 0;
                         while (validCycleDays < cycleDays && currentDate <= endDate) {
-                            if (isValidDay(currentDate, dayType)) {
-                                validCycleDays++;
-                            }
+                            if (isValidDay(currentDate, dayType)) validCycleDays++;
                             currentDate.setDate(currentDate.getDate() + 1);
                         }
                     }
@@ -160,6 +152,7 @@
             }
         }
 
+        // 일정 재조정
         function reprocessSchedules() {
             const originalEvents = { ...events };
             events = {};
@@ -180,9 +173,7 @@
                 const dates = scheduleEvents.map(e => new Date(e.date)).sort((a, b) => a - b);
                 for (let i = 1; i < dates.length; i++) {
                     const diff = (dates[i] - dates[i - 1]) / (1000 * 60 * 60 * 24);
-                    if (diff > 1) {
-                        cycleDays = Math.min(cycleDays, diff);
-                    }
+                    if (diff > 1) cycleDays = Math.min(cycleDays, diff);
                 }
                 durationDays = scheduleEvents.filter(e => new Date(e.date).getTime() <= dates[0].getTime() + durationDays * 24 * 60 * 60 * 1000).length;
 
@@ -206,39 +197,24 @@
             displaySchedules();
         }
 
+        // 일정 추가 처리
         function handleSchedule() {
             const scheduleName = document.getElementById('scheduleName').value.trim();
             const startDateInput = document.getElementById('startDate').value;
             const endDateInput = document.getElementById('endDate').value;
             const dayType = document.getElementById('dayType').value;
-            const cycleDaysInput = document.getElementById('cycleDays').value;
-            const durationDaysInput = document.getElementById('durationDays').value;
+            const cycleDays = parseInt(document.getElementById('cycleDays').value);
+            const durationDays = parseInt(document.getElementById('durationDays').value);
             const eventTitle = document.getElementById('eventTitle').value.trim();
 
-            // 입력값 검증
-            if (!scheduleName || !eventTitle) {
-                alert('일정 제목과 내용을 입력하세요.');
-                return;
-            }
-            if (!startDateInput || !endDateInput) {
-                alert('시작 날짜와 종료 날짜를 입력하세요.');
-                return;
-            }
+            if (!scheduleName || !eventTitle) return alert('일정 제목과 내용을 입력하세요.');
+            if (!startDateInput || !endDateInput) return alert('시작 날짜와 종료 날짜를 입력하세요.');
             const startDate = new Date(startDateInput);
             const endDate = new Date(endDateInput);
-            if (isNaN(startDate.getTime()) || isNaN(endDate.getTime())) {
-                alert('유효한 날짜 형식을 입력하세요.');
-                return;
-            }
-            if (startDate > endDate) {
-                alert('종료 날짜는 시작 날짜보다 늦어야 합니다.');
-                return;
-            }
-            const cycleDays = parseInt(cycleDaysInput);
-            const durationDays = parseInt(durationDaysInput);
+            if (isNaN(startDate.getTime()) || isNaN(endDate.getTime())) return alert('유효한 날짜 형식을 입력하세요.');
+            if (startDate > endDate) return alert('종료 날짜는 시작 날짜보다 늦어야 합니다.');
             if (isNaN(cycleDays) || isNaN(durationDays) || cycleDays < 1 || durationDays < 1) {
-                alert('반복 주기와 유지 일수는 1 이상의 숫자를 입력하세요.');
-                return;
+                return alert('반복 주기와 유지 일수는 1 이상의 숫자를 입력하세요.');
             }
 
             addSchedule(scheduleName, startDate, endDate, dayType, cycleDays, durationDays, eventTitle);
@@ -247,13 +223,11 @@
             alert('일정이 추가되었습니다.');
         }
 
+        // 공휴일 추가
         function addHoliday() {
             const holidayDate = document.getElementById('holidayDate').value;
             const holidayName = document.getElementById('holidayName').value.trim();
-            if (!holidayDate || !holidayName) {
-                alert('공휴일 날짜와 이름을 입력하세요.');
-                return;
-            }
+            if (!holidayDate || !holidayName) return alert('공휴일 날짜와 이름을 입력하세요.');
             customHolidays[holidayDate] = holidayName;
             localStorage.setItem('custom_holidays', JSON.stringify(customHolidays));
             reprocessSchedules();
@@ -261,24 +235,21 @@
             alert('사용자 정의 공휴일이 추가되었습니다. 기존 평일 일정이 조정되었습니다.');
         }
 
+        // 일정 표시
         function displaySchedules() {
             const scheduleList = document.getElementById('scheduleList');
             let html = '<h3>등록된 일정</h3>';
             for (let schedule in events) {
-                html += `<div>
-                    <strong>${schedule}</strong>
-                    <button onclick="deleteSchedule('${schedule}')">삭제</button>
-                    <ul>`;
+                html += `<div><strong>${schedule}</strong> <button onclick="deleteSchedule('${schedule}')">삭제</button><ul>`;
                 events[schedule].forEach((event, index) => {
-                    html += `<li>
-                        ${event.date}: <input type="text" value="${event.title}" onchange="editSchedule('${schedule}', ${index}, this.value)">
-                    </li>`;
+                    html += `<li>${event.date}: <input type="text" value="${event.title}" onchange="editSchedule('${schedule}', ${index}, this.value)"></li>`;
                 });
                 html += '</ul></div>';
             }
             scheduleList.innerHTML = html;
         }
 
+        // 일정 삭제
         function deleteSchedule(scheduleName) {
             if (confirm(`'${scheduleName}' 일정을 삭제하시겠습니까?`)) {
                 delete events[scheduleName];
@@ -287,6 +258,7 @@
             }
         }
 
+        // 일정 수정
         function editSchedule(scheduleName, index, newTitle) {
             if (newTitle.trim()) {
                 events[scheduleName][index].title = newTitle.trim();
@@ -295,6 +267,7 @@
             }
         }
 
+        // 공휴일 삭제
         function deleteHoliday(date) {
             if (confirm(`'${customHolidays[date]}' 사용자 정의 공휴일을 삭제하시겠습니까?`)) {
                 delete customHolidays[date];
@@ -304,6 +277,7 @@
             }
         }
 
+        // 초기화 및 이벤트 리스너
         window.addEventListener('load', async () => {
             events = JSON.parse(localStorage.getItem('events')) || {};
             customHolidays = JSON.parse(localStorage.getItem('custom_holidays')) || {};
@@ -311,7 +285,6 @@
             loadHolidays();
             displaySchedules();
         });
-
         yearSelect.addEventListener('change', loadHolidays);
     </script>
 </body>
