--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         .calendar .weekend { background-color: #ffcccb; }
         .calendar .holiday { background-color: #ffcccb; }
         .calendar .saturday { background-color: #add8e6; }
-        .calendar .today { background-color: #ccffcc !important; border: 2px solid #00ff00; }
+        .calendar .today { background-color: #add8e6 !important; border: 2px solid #1e90ff; }
         .calendar .event { font-weight: bold; color: #d81b60; font-size: 12px; }
         select, button, a { padding: 5px; margin: 5px; border-radius: 3px; }
         button { background-color: #4CAF50; color: white; border: none; cursor: pointer; }
